--- a/preprocess/consistent_check.ipynb
+++ b/preprocess/consistent_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,110 +191,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1',\n",
-       "       '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1',\n",
-       "       '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1', '1',\n",
-       "       '3', '3', '3', '3', '3', '3', '3', '3', '3', '3', '3', '3', '3',\n",
-       "       '3', '3', '3', '3', '3', '3', '3', '3', '3', '3', '3', '3', '3',\n",
-       "       '3', '3', '3', '3', '3', '3', '3', '3', '3', '3', '3', '3', '3',\n",
-       "       '3', '3', '3', '3', '3', '3', '3', '3', '3', '3', '3', '3', '3',\n",
-       "       '3', '3', '3', '3', '3', '3', '3', '3', '3', '3', '3', '3', '3',\n",
-       "       '3', '3', '3', '3', '3', '2', '2', '2', '2', '2', '2', '2', '2',\n",
-       "       '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2',\n",
-       "       '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '5', '5',\n",
-       "       '5', '5', '5', '5', '5', '5', '5', '5', '5', '5', '5', '5', '5',\n",
-       "       '5', '5', '5', '5', '5', '5', '5', '5', '5', '5', '5', '5', '5',\n",
-       "       '5', '5', '5', '5', '5', '5', '5', '5', '5', '5', '5', '5', '5',\n",
-       "       '5', '5', '5', '5', '5', '5', '5', '5', '5', '5', '5', '5', '5',\n",
-       "       '5', '4', '4', '4', '4', '4', '4', '4', '4', '4', '4', '4', '4',\n",
-       "       '4', '4', '4', '4', '4', '4', '4', '4', '4', '4', '4', '4', '4',\n",
-       "       '4', '4', '4', '4', '4', '4', '4', '7', '7', '7', '7', '7', '7',\n",
-       "       '7', '7', '7', '7', '7', '7', '7', '7', '7', '7', '7', '7', '7',\n",
-       "       '7', '7', '7', '7', '7', '7', '7', '7', '7', '7', '7', '7', '7',\n",
-       "       '7', '7', '7', '7', '6', '6', '6', '6', '6', '6', '6', '6', '6',\n",
-       "       '6', '6', '6', '6', '6', '6', '6', '6', '6', '6', '6', '6', '6',\n",
-       "       '6', '6', '6', '6', '6', '6', '9', '9', '9', '9', '9', '9', '9',\n",
-       "       '9', '9', '9', '9', '9', '9', '9', '9', '9', '9', '9', '9', '9',\n",
-       "       '9', '9', '9', '9', '9', '9', '9', '9', '9', '9', '9', '9', '9',\n",
-       "       '9', '9', '9', '9', '9', '9', '9', '9', '9', '9', '9', '9', '9',\n",
-       "       '9', '9', '9', '9', '9', '9', '9', '9', '9', '9', '9', '9', '9',\n",
-       "       '9', '9', '9', '9', '9', '9', '9', '9', '9', '9', '9', '9', '9',\n",
-       "       '9', '9', '9', '9', '8', '8', '8', '8', '8', '8', '8', '8', '8',\n",
-       "       '8', '8', '8', '8', '8', '8', '8', '8', '8', '8', '8', '8', '8',\n",
-       "       '8', '8', '8', '8', '8', '8', '8', '8', '8', '8', '8', '8', '8',\n",
-       "       '8', '8', '8', '8'], dtype='|S1')"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "origin_npz['mrns']"
+    "new_npz = np.load(os.path.join(new_dir, 'npzs', '0.npz'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(407, 256, 256, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (new_npz['label'].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([u'1', u'1', u'1', u'1', u'1', u'1', u'1', u'1', u'1', u'1', u'1',\n",
-       "       u'1', u'1', u'1', u'1', u'1', u'1', u'1', u'1', u'1', u'1', u'1',\n",
-       "       u'1', u'1', u'1', u'1', u'1', u'1', u'1', u'1', u'1', u'1', u'1',\n",
-       "       u'1', u'1', u'1', u'1', u'1', u'1', u'3', u'3', u'3', u'3', u'3',\n",
-       "       u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3',\n",
-       "       u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3',\n",
-       "       u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3',\n",
-       "       u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3',\n",
-       "       u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3',\n",
-       "       u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'3', u'2',\n",
-       "       u'2', u'2', u'2', u'2', u'2', u'2', u'2', u'2', u'2', u'2', u'2',\n",
-       "       u'2', u'2', u'2', u'2', u'2', u'2', u'2', u'2', u'2', u'2', u'2',\n",
-       "       u'2', u'2', u'2', u'2', u'2', u'2', u'2', u'2', u'2', u'5', u'5',\n",
-       "       u'5', u'5', u'5', u'5', u'5', u'5', u'5', u'5', u'5', u'5', u'5',\n",
-       "       u'5', u'5', u'5', u'5', u'5', u'5', u'5', u'5', u'5', u'5', u'5',\n",
-       "       u'5', u'5', u'5', u'5', u'5', u'5', u'5', u'5', u'5', u'5', u'5',\n",
-       "       u'5', u'5', u'5', u'5', u'5', u'5', u'5', u'5', u'5', u'5', u'5',\n",
-       "       u'5', u'5', u'5', u'5', u'5', u'5', u'5', u'5', u'5', u'4', u'4',\n",
-       "       u'4', u'4', u'4', u'4', u'4', u'4', u'4', u'4', u'4', u'4', u'4',\n",
-       "       u'4', u'4', u'4', u'4', u'4', u'4', u'4', u'4', u'4', u'4', u'4',\n",
-       "       u'4', u'4', u'4', u'4', u'4', u'4', u'4', u'4', u'7', u'7', u'7',\n",
-       "       u'7', u'7', u'7', u'7', u'7', u'7', u'7', u'7', u'7', u'7', u'7',\n",
-       "       u'7', u'7', u'7', u'7', u'7', u'7', u'7', u'7', u'7', u'7', u'7',\n",
-       "       u'7', u'7', u'7', u'7', u'7', u'7', u'7', u'7', u'7', u'7', u'7',\n",
-       "       u'6', u'6', u'6', u'6', u'6', u'6', u'6', u'6', u'6', u'6', u'6',\n",
-       "       u'6', u'6', u'6', u'6', u'6', u'6', u'6', u'6', u'6', u'6', u'6',\n",
-       "       u'6', u'6', u'6', u'6', u'6', u'6', u'9', u'9', u'9', u'9', u'9',\n",
-       "       u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9',\n",
-       "       u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9',\n",
-       "       u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9',\n",
-       "       u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9',\n",
-       "       u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9',\n",
-       "       u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9', u'9',\n",
-       "       u'9', u'9', u'9', u'9', u'9', u'8', u'8', u'8', u'8', u'8', u'8',\n",
-       "       u'8', u'8', u'8', u'8', u'8', u'8', u'8', u'8', u'8', u'8', u'8',\n",
-       "       u'8', u'8', u'8', u'8', u'8', u'8', u'8', u'8', u'8', u'8', u'8',\n",
-       "       u'8', u'8', u'8', u'8', u'8', u'8', u'8', u'8', u'8', u'8', u'8'],\n",
-       "      dtype='<U1')"
+       "(array([ 39,  40,  41,  42,  43,  44,  45,  46,  47,  48,  49,  50,  51,\n",
+       "         52,  53,  54,  55,  56,  57,  58,  59,  60,  61,  62,  63,  64,\n",
+       "         65,  66,  67,  68,  69,  70,  71,  72,  73,  74,  75,  76, 103,\n",
+       "        104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116,\n",
+       "        117, 118, 119, 120, 121, 122, 123, 124, 125, 140, 141, 149, 150,\n",
+       "        151, 152, 153, 154, 155, 194, 195, 196, 197, 198, 199, 200, 226,\n",
+       "        227, 228, 229, 230, 231, 232, 233, 234, 235, 236, 237, 238, 239,\n",
+       "        240, 241, 242, 243, 253, 254, 255, 256, 257, 258, 259, 260, 261,\n",
+       "        262, 263, 264, 265, 266, 267, 268, 269, 270, 271, 272, 273, 274,\n",
+       "        275, 276, 277, 278, 279, 280, 282, 283, 284, 285, 286, 287, 288,\n",
+       "        289, 290, 291, 292, 366, 367, 368, 369, 370, 371, 372, 373]),)"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_npz['mrn']"
+    "np.where(np.sum(new_npz['label'], (1,2,3)) == 0)"
    ]
   },
   {
